--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 Sie planen, konfigurieren und betreuen IT-Systeme, um Unternehmen und Organisationen reibungslos am Laufen zu halten</p>
         </div>
         <div class="circle">
-            <img src="images\ServerImage.jpg" alt="">
+            <img src="https://github.com/MJMania23/Portfolio_HTML/blob/main/ServerImage.jpg" alt="">
         </div>
     </header>
         <body>
