--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
                 Sie planen, konfigurieren und betreuen IT-Systeme, um Unternehmen und Organisationen reibungslos am Laufen zu halten</p>
         </div>
         <div class="circle">
-            <img src="images/ServerImage.jpg" alt="">
+            <img src="https://github.com/MJMania23/Portfolio_HTML/tree/main/images/ServerImage.jpg" alt="">
         </div>
     </header>
         <body>
             <section id="about_me_section">
-            <img src="images/about_me_section_new.jpg" alt="">
+            <img src="images\about_me_section_new.jpg" alt="">
         <!-- eigenes foto einfügen -->
             <div class="about_me_container">
             <h2>Über Mich</h2>
@@ -86,7 +86,7 @@
                 <p>
                 <h4>Projektantrag<br></h4>• Konzept<br>• Anforderungsnalyse<br>• IST-Analyse<br>• Soll-Konzept<br>•
                 Schutzbedarfsanalyse<br>• Dokumentation<br><br></p>
-                <a href="images/maintenance-2422169.jpg">Zertifikat</a>
+                <a href="images\maintenance-2422169.jpg">Zertifikat</a>
                 </div>
             </div>
         </div>
@@ -94,34 +94,34 @@
           <h2>IHK Projekt AP2</h2>
                 <div class="grid_container">
                     <div id="item1" class="grid_item">
-                        <img src="images/project-svgrepo-com.svg" alt="">
+                        <img src="images\project-svgrepo-com.svg" alt="">
                         
                         <div>
-                            <a href="images/maintenance-2422169.jpg"><h3><span style="color: var(--text-color);">Projekt Antrag</span></h3></a>
+                            <a href="images\maintenance-2422169.jpg"><h3><span style="color: var(--text-color);">Projekt Antrag</span></h3></a>
                             <p>Hier wird es demnächst  zu einem realen Projekt kommen.</p>
                         </div>
                     </div>
-                    <div id="item2" class="grid_item"><img src="https://github.com/MJMania23/Portfolio_HTML/blob/main/clipboard-checklist-6-svgrepo-com.svg" alt="">
-                    <a href="images/maintenance-2422169.jpg">
+                    <div id="item2" class="grid_item"><img src="images\clipboard-checklist-6-svgrepo-com.svg" alt="">
+                    <a href="images\maintenance-2422169.jpg">
                         <h3><span style="color: var(--text-color);">Konzept</span></h3>
                     </a>
                     </div>
                     <div id="item3" class="grid_item">
-                        <a href="images/maintenance-2422169.jpg">
+                        <a href="images\maintenance-2422169.jpg">
                             <h3><span style="color: var(--text-color);">Dokumentation</span></h3>
-                        </a><img src="https://github.com/MJMania23/Portfolio_HTML/blob/main/document-svgrepo-com.svg" alt="">
+                        </a><img src="images\document-svgrepo-com.svg" alt="">
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium natus harum nostrum itaque cum quia magnam quod quo molestias molestiae.</p>
                     </div>
 
                     <div id="item4" class="grid_item">
-                        <a href="images/maintenance-2422169.jpg">
-                            <h3><span style="color: var(--text-color);">Schutz&shybedarfsanalyse</span></h3><br><img src="images/security-shield-svgrepo-com.svg" alt="">
+                        <a href="images\maintenance-2422169.jpg">
+                            <h3><span style="color: var(--text-color);">Schutz&shybedarfsanalyse</span></h3><br><img src="images\security-shield-svgrepo-com.svg" alt="">
 
                     </div>
                     <div id="item5" class="grid_item"><img
-                            src="images/analysis-chart-data-document-report-statistic-svgrepo-com.svg" alt="">
+                            src="images\analysis-chart-data-document-report-statistic-svgrepo-com.svg" alt="">
                         <div>
-                            <a href="images/maintenance-2422169.jpg">
+                            <a href="images\maintenance-2422169.jpg">
                                 <h3><span style="color: var(--text-color);">Anforderungsanalyse</span></h3></a>
                             <p>Wie viele Probleme werden gelöst? Hier ist die Antwort auf diese Fragen.</p>
                         </div>
