--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <h3>Projekt AP2</h3>
                 <p>
                 <h4>Projektantrag<br></h4>• Konzept<br>• Anforderungsnalyse<br>• IST-Analyse<br>• Soll-Konzept<br>•
-                Schutzbedarfsanalyse<br>• Dokumentation<br><br></p>
+                Schutzbedarfs&shyanalyse<br>• Dokumentation<br><br></p>
                 <a href="images\maintenance-2422169.jpg">Zertifikat</a>
                 </div>
             </div>
