--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                 <div class="content">
                 <h3>Projekt AP2</h3>
                 <p>
-                <h4>Projektantrag<br></h4>• Konzept<br>• Anforderungsnalyse<br>• IST-Analyse<br>• Soll-Konzept<br>•
-                Schutzbedarfs&shyanalyse<br>• Dokumentation<br><br></p>
+                <h4>Projektantrag<br></h4>• Konzept<br>• Anforderungen<br>• IST-Analyse<br>• Soll-Konzept<br>•
+                Schutzbedarf<br>• Dokumentation<br><br></p>
                 <a href="images\maintenance-2422169.jpg">Zertifikat</a>
                 </div>
             </div>
