--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="de" xmlns="http://www.w3.org/1999/html">
 
 <head>
     <meta charset="UTF-8">
@@ -28,18 +28,18 @@
                  </ul>
             </nav>
              <h1>Marco Lütkemüller</h1>
-                <H2><span style="color: var(--main-brand-color);">NetzwerkTechnik</span></H2>
+                <H2><span style="color: var(--main-brand-color);">Netzwerk&shyTechnik</span></H2>
                 <p class="subheading">Fachinformatiker für Systemintegration sind die Architekten der digitalen Welt. 
                 Sie planen, konfigurieren und betreuen IT-Systeme, um Unternehmen und Organisationen reibungslos am Laufen zu halten</p>
         </div>
         <div class="circle">
-            <img src="images\ServerImage.jpg" alt="">
+            <img src="images\IMG_20240314_152522.jpg" alt="">
         </div>
     </header>
         <body>
             <section id="about_me_section">
-            <img src="images\about_me_section_new.jpg" alt="">
-        <!-- eigenes foto einfügen -->
+            <img src="images\IMG_20240314_152517.jpg" alt="">
+                <!-- eigenes foto einfügen -->
             <div class="about_me_container">
             <h2>Über Mich</h2>
             <p>Bereits in jungen Jahren habe ich begonnen, mich mit Computertechnologien zu befassen, zu Zeiten von
@@ -48,86 +48,80 @@
                 gebracht hat, mein Hobby zum Beruf zu machen.<br>
                 Im Rahmen meiner Umschulung habe ich bereits grundlegendes Wissen erlangt in den Bereichen:<br>•
                 Netzwerktechnik, Planung mit Aufbau sowie Konfiguration.<br>• Relationale Datenbanken Konzeptionierung
-                und Aufbau<br>
-                • Betriebssysteme:<br>
-                • Windows 10/11/Server2019 // Linux (Debian)<br>•
-                HTML5/CSS/Js/Java/PHP<br> <br>Verwendete Software:<br> <em>• Oracle: SQL, VirtualBox
-                    <br>• Jetbrains: IntelliJ, Pycharm<br>• Microsoft: Office-Paket, Visual Studio Code</em>
+                und Aufbau<br>• Betriebssysteme: Windows 10/11/Server2019 // Linux (Debian)<br>•
+                HTML5/CSS/Js/Java/PHP<br> 
+                <br>Verwendete Software:<br> <em>• Oracle: SQL, VirtualBox
+                <br>• Jetbrains: IntelliJ, Pycharm<br>• Microsoft: Office-Paket, Visual Studio Code</em>
             </p>
         </div>
     </section>
     <section id="objective_section">
         <h2>Zielsetzung <br> während des Praktikums</h2>
-        
-        <div class="container">
+            <div class="container">
             <div class="box">
                 <span></span>
                 <div class="content">
                 <h3>Kenntnisse Vertiefen</h3>
                 <p>
-                <h4>Netzwerktechnik<br></h4>• Installation<br>• Konfiguration<br>
-                • Datensicherung<br>• Monitoring<br>• Sicherheit<br><br><br>
+                <h4>Netzwerktechnik</h4><br>• Installation<br>• Konfiguration<br>
+                • Datensicherung<br>• Monitoring<br>• Sicherheit<br><br></p>
                 <a href="https://www.comptia.org/de/zertifizierungen/network">Zertifikat</a>
                 </div>
-            </div>
-         <div class="box">
-                <span></span>
-                <div class="content">
+                </div>
+            <div class="box">
+            <span></span>
+            <div class="content">
                 <h3>Fähigkeiten erweitern</h3>
-                <p>
-                <h4>DBMS<br></h4>• Oracle SQL<br>• My SQL<br>• PHP<br>• Xampp Server<br>• Apache<br>• Java<br><br></p>
+                <p><h4>DBMS</h4><br>• SQL<br>• PHP<br>• Xampp Server<br>• Apache<br>• Java<br><br></p>
                 <a href="https://www.lpi.org/de/our-certifications/lpic-1-overview/">Zertifikat</a>
             </div>
             </div>
             <div class="box">
                 <span></span>
                 <div class="content">
-                <h3>Projekt AP2</h3>
+                <h3>Praktikum Projektstart</h3>
                 <p>
-                <h4>Projektantrag<br></h4>• Konzept<br>• Anforderungen<br>• IST-Analyse<br>• Soll-Konzept<br>•
+                <h4>Projektantrag</h4><br>• Konzept<br>• Anforderungen<br>• IST-Analyse<br>•
                 Schutzbedarf<br>• Dokumentation<br><br></p>
                 <a href="images\maintenance-2422169.jpg">Zertifikat</a>
                 </div>
-            </div>
-        </div>
+             </div>
+    </section>
             <footer id="projekt_section">
-          <h2>IHK Projekt AP2</h2>
-                <div class="grid_container">
+                    <h2>Projekt IHK AP 1-2</h2>
+                             <div class="grid_container">
                     <div id="item1" class="grid_item">
                         <img src="images\project-svgrepo-com.svg" alt="">
-                        
-                        <div>
+                         <div>
                             <a href="images\maintenance-2422169.jpg"><h3><span style="color: var(--text-color);">Projekt Antrag</span></h3></a>
                             <p>Hier wird es demnächst  zu einem realen Projekt kommen.</p>
                         </div>
-                    </div>
-                    <div id="item2" class="grid_item"><img src="images\clipboard-checklist-6-svgrepo-com.svg" alt="">
-                    <a href="images\maintenance-2422169.jpg">
+                          </div>
+                        <div id="item3" class="grid_item">
                         <h3><span style="color: var(--text-color);">Konzept</span></h3>
-                    </a>
-                    </div>
-                    <div id="item3" class="grid_item">
+                        <img src="images\clipboard-checklist-6-svgrepo-com.svg" alt="">
+                    <a href="images\maintenance-2422169.jpg"></a>
+                        </div>
+                    <div id="item2" class="grid_item">
                         <a href="images\maintenance-2422169.jpg">
                             <h3><span style="color: var(--text-color);">Dokumentation</span></h3>
                         </a><img src="images\document-svgrepo-com.svg" alt="">
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium natus harum nostrum itaque cum quia magnam quod quo molestias molestiae.</p>
+                        <p></p>
                     </div>
 
                     <div id="item4" class="grid_item">
-                        <a href="images\maintenance-2422169.jpg">
-                            <h3><span style="color: var(--text-color);">Schutz&shybedarfsanalyse</span></h3><br><img src="images\security-shield-svgrepo-com.svg" alt="">
-
+                        <a href="images\maintenance-2422169.jpg"><h3><span style="color: var(--text-color);">Schutzbedarf</span></h3><br><img src="images\security-shield-svgrepo-com.svg" alt="">
                     </div>
-                    <div id="item5" class="grid_item"><img
+                 <div id="item5" class="grid_item"><img
                             src="images\analysis-chart-data-document-report-statistic-svgrepo-com.svg" alt="">
                         <div>
                             <a href="images\maintenance-2422169.jpg">
-                                <h3><span style="color: var(--text-color);">Anforderungsanalyse</span></h3></a>
+                                <h3><span style="color: var(--text-color);">Anforderungen</span></h3></a>
                             <p>Wie viele Probleme werden gelöst? Hier ist die Antwort auf diese Fragen.</p>
                         </div>
                     </div>
                 </div>
             </footer>
-</div>
-</body>
+        </div>
+      </body>
 </html>
