--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
                 Sie planen, konfigurieren und betreuen IT-Systeme, um Unternehmen und Organisationen reibungslos am Laufen zu halten</p>
         </div>
         <div class="circle">
-            <img src="images\IMG_20240314_152522.jpg" alt="">
+            <img src="<img src="images\ServerImage.jpg" alt="">" alt="">
         </div>
     </header>
         <body>
             <section id="about_me_section">
-            <img src="images\IMG_20240314_152517.jpg" alt="">
+            <img src="images\about_me_section_new.jpg" alt="">
                 <!-- eigenes foto einfügen -->
             <div class="about_me_container">
             <h2>Über Mich</h2>
